[package]
name = "checkio-provisioning"
version = "0.3.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
clap = { version = "4.5.51", features = ["derive", "env"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
uuid = { version = "1", features = ["v4"] }
